METAL 3.6 - Object "flashes" on certain mouse events with GPU Backend #106704

Closed
opened 2023-04-08 07:53:52 +02:00 by Piotr Nikov · 2 comments

System Information
Operating system: MacOs 13.3
Graphics card: M1 Max

Blender Version
Broken: Latest 3.6s
Worked: 3.5 LTS

Short description of error
Objects "flash" on certain mouse events (edit vertex/points), moving mouse to and from 3D Viewport, drawing a stroke... This is more noticeable on Grease Pencil objects.

Exact steps for others to reproduce the error
See video.
. Make sure you are configured with Metal GPU Backend.
. Create Filled Stroke in Grease Pencil.
. Move mouse around viewport elements, or go into Edit Mode and move points...
. Filled objects flashes intermittently.
. It's very annoying :)

**System Information** Operating system: MacOs 13.3 Graphics card: M1 Max **Blender Version** Broken: Latest 3.6s Worked: 3.5 LTS **Short description of error** Objects "flash" on certain mouse events (edit vertex/points), moving mouse to and from 3D Viewport, drawing a stroke... This is more noticeable on Grease Pencil objects. **Exact steps for others to reproduce the error** See video. . Make sure you are configured with Metal GPU Backend. . Create Filled Stroke in Grease Pencil. . Move mouse around viewport elements, or go into Edit Mode and move points... . Filled objects flashes intermittently. . It's very annoying :)
Piotr Nikov added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-08 07:53:52 +02:00
Piotr Nikov changed title from METAL 3.6 - Object "flashes" on certain mouse events with GPU Backend to InterestMetal METAL 3.6 - Object "flashes" on certain mouse events with GPU Backend 2023-04-08 07:55:58 +02:00
Piotr Nikov changed title from InterestMetal METAL 3.6 - Object "flashes" on certain mouse events with GPU Backend to METAL 3.6 - Object "flashes" on certain mouse events with GPU Backend 2023-04-08 07:56:10 +02:00
Pratik Borhade added the
Platform
macOS
Interest
Metal
labels 2023-04-10 08:29:55 +02:00

I can confirm the problem, but the glitch occurs much less frequently than shown in the video.


System Information
Operating system: macOS-13.2.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 1.2

I can confirm the problem, but the glitch occurs much less frequently than shown in the video. --- **System Information** Operating system: macOS-13.2.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 1.2

Also able to reproduce. This appears to be an undesired side-effect of a fix to the issue which could cause the viewport to freeze and timeout under certain circumstances.

This is to do with GPU workload ordering. Previously, the code enforced strict render command ordering, such that all rendering must occur in explicit order. However this meant that certain async work may not get correctly scheduled and would time out. The solution relaxed this across frame boundaries, and uses Metal's built-in dependency resolution, however, it appears that occasionally, specifically with regard to panels being blitted to the swap chain drawable, the drawable gets displayed before all bits have finished executing.

This is partially a consequence of panels being updated on-demand. One possible solution I will look into is whether we can insert additional GPU synchronisation targeting this specific scenario.

Also able to reproduce. This appears to be an undesired side-effect of a fix to the issue which could cause the viewport to freeze and timeout under certain circumstances. This is to do with GPU workload ordering. Previously, the code enforced strict render command ordering, such that all rendering must occur in explicit order. However this meant that certain async work may not get correctly scheduled and would time out. The solution relaxed this across frame boundaries, and uses Metal's built-in dependency resolution, however, it appears that occasionally, specifically with regard to panels being blitted to the swap chain drawable, the drawable gets displayed before all bits have finished executing. This is partially a consequence of panels being updated on-demand. One possible solution I will look into is whether we can insert additional GPU synchronisation targeting this specific scenario.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-14 07:54:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106704
There is no content yet.