source/blender/gpu/metal/mtl_context.mm
@@ -2191,16 +2191,6 @@ void present(MTLRenderPassDescriptor *blit_descriptor,
   id<MTLCommandBuffer> cmdbuf = [ctx->queue commandBuffer];
   MTLCommandBufferManager::num_active_cmd_bufs++;
 
-  if (MTLCommandBufferManager::sync_event != nil) {
-    /* Release synchronization primitive for current frame to avoid cross-frame dependencies.
-     * We require MTLEvents to ensure correct ordering of workload submissions within a frame,
-     * however, we should not create long chains of dependencies spanning several drawables as any
-     * temporary stalls can then trigger erroneous GPU timeouts in non-dependent submissions.  */
-    [MTLCommandBufferManager::sync_event release];
-    MTLCommandBufferManager::sync_event = nil;
-    MTLCommandBufferManager::event_signal_val = 0;
-  }
-
   /* Do Present Call and final Blit to MTLDrawable. */
   id<MTLRenderCommandEncoder> enc = [cmdbuf renderCommandEncoderWithDescriptor:blit_descriptor];
   [enc setRenderPipelineState:blit_pso];
